test/libsolidity/syntaxTests/natspec/invalid/docstring_inheritdoc_emptys.sol
contract C {
    /// @inheritdoc
    function f() internal {
    }
}
// ----
// DocstringParsingError 1933: (17-32): Expected contract name following documentation tag @inheritdoc.
